[project]
name = "craw"
version = "0.1.0"
description = ""
authors = [
    {name = "trandat",email = "giavien2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "selenium (>=4.38.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "craw", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
